Initial tests and fixes

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 html {
   background-color: #FFF; }
 
+.vesak-title {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 300;
+  font-size: 3.1em;
+  text-align: center; }
+
 /*# sourceMappingURL=main.css.map */
