--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,3 +3,10 @@ $back: #fffe0f
 
 html
 	background-color: #FFF
+
+.vesak-title
+	font-family: 'Source Sans Pro', sans-serif
+	font-weight: 300
+	font-size: 3.1em
+	text-align: center
+
