First working version of vesak using milligram css framework

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,8 +5,22 @@ html
 	background-color: #FFF
 
 .vesak-title
-	font-family: 'Source Sans Pro', sans-serif
+	font-family: 'Roboto', sans-serif
 	font-weight: 300
 	font-size: 3.1em
 	text-align: center
 
+#converted-date
+	height: 120px
+	display: flex
+	justify-content: center
+	align-items: center
+	text-align: center
+	font-size: 1.5em
+.tip
+	font-size: 14px
+	color: rgba(0,0,0, 0.6)
+
+.tagline
+	text-align: center
+	display: block
