--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,34 @@ html {
   background-color: #FFF; }
 
 .vesak-title {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 3.1em;
   text-align: center; }
+
+#converted-date {
+  height: 120px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  font-size: 1.5em; }
+
+.tip {
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6); }
+
+.tagline {
+  text-align: center;
+  display: block; }
 
 /*# sourceMappingURL=main.css.map */
