--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,22 +1,54 @@
 $back: #fffe0f
+$text-color: #505050
+$green: #86CEAD
+
+
 
 
 html
 	background-color: #ffeeee
-
-.vesak-title
+	color: $text-color
 	font-family: 'Roboto', sans-serif
+
+select
+	width: 100%
+.container
+	padding-left: 3.5em
+	padding-right: 3.5em
+	margin: 25px auto
+.right
+	float: right
+
+.switcher-box
+	margin-top: 30px
+	margin-bottom: 30px
+	display: flex
+	text-align: center
+	align-items: center
+	height: 40px
+	border-top: 1px solid 
+	border-bottom: 1px solid 
+.vesak-title
 	font-weight: 300
 	font-size: 3.1em
 	text-align: center
 
 #converted-date
-	height: 120px
+	background-color: $green
+	max-width: 90%
+	margin: 8px auto
+	height: 100px
+	border-radius: 5px
 	display: flex
 	justify-content: center
 	align-items: center
 	text-align: center
 	font-size: 1.5em
+
+.invisible
+	visibility: hidden
+.label
+
 .tip
 	font-size: 14px
 	color: rgba(0,0,0, 0.6)
