--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,48 @@
 html {
-  background-color: #ffeeee; }
+  background-color: #ffeeee;
+  color: #505050;
+  font-family: "Roboto", sans-serif; }
+
+select {
+  width: 100%; }
+
+.container {
+  padding-left: 3.5em;
+  padding-right: 3.5em;
+  margin: 25px auto; }
+
+.right {
+  float: right; }
+
+.switcher-box {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  height: 40px;
+  border-top: 1px solid;
+  border-bottom: 1px solid; }
 
 .vesak-title {
-  font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 3.1em;
   text-align: center; }
 
 #converted-date {
-  height: 120px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+  background-color: #86CEAD;
+  max-width: 90%;
+  margin: 8px auto;
+  height: 100px;
+  border-radius: 5px;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   font-size: 1.5em; }
+
+.invisible {
+  visibility: hidden; }
 
 .tip {
   font-size: 14px;
